--- a/index.html
+++ b/index.html
@@ -101,5 +101,6 @@
       </div>
     </div>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <script src="//code.tidio.co/mexugcvdrjrayeud6zhdlmdlork1rx0g.js" async></script>
   </body>
 </html>
